Fixes and improvements - Made body top padding consistent with nvbar height - Made Gallery images display in pages - Fixed issue where date and title would overlap on thin displays for post template

--- a/static/main/css/main.css
+++ b/static/main/css/main.css
@@ -8,7 +8,7 @@ head, body {
 }
 
 body {
-    padding-top: 70px; /*space for navbar*/
+    padding-top: 9vh; /*space for navbar*/
     
     min-height: 100vh;
 
@@ -143,4 +143,42 @@ section {
 
     margin: 5px 0;
     border-bottom: 1px solid lightgray;
+}
+
+#page-nav {
+    float: right;
+
+    font-size: 1.5em;
+}
+
+#page-nav * {
+    display: inline-block;
+
+    padding: 0 0.5em;
+
+    line-height: 1.5em;
+
+    box-sizing: border-box;
+}
+
+#page-nav a {
+    width: 1.5em;
+    height: 1.5em;
+
+    color: black;
+    background-color: white;
+
+    border-radius: 50%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+#page-nav a:hover {
+    text-decoration: none;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.12), 0 4px 8px rgba(0,0,0,0.24);
+}
+
+#page-nav a.disabled {
+    display: none;
 }
