--- a/static/main/css/post.css
+++ b/static/main/css/post.css
@@ -28,6 +28,7 @@
 }
 
 #title {
+    margin-top: 30px;
     margin-bottom: 5px;
 }
 
