--- a/static/main/css/posts.css
+++ b/static/main/css/posts.css
@@ -1,46 +1,9 @@
 
-#posts #page-nav {
-    float: right;
-
-    font-size: 1.5em;
-}
 
 #posts::after {
     clear: both;
     content:"";
     display: table;
-}
-
-#posts #page-nav * {
-    display: inline-block;
-
-    padding: 0 0.5em;
-
-    line-height: 1.5em;
-
-    box-sizing: border-box;
-}
-
-#posts #page-nav a {
-    width: 1.5em;
-    height: 1.5em;
-
-    color: black;
-    background-color: white;
-
-    border-radius: 50%;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-
-#posts #page-nav a:hover {
-    text-decoration: none;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.12), 0 4px 8px rgba(0,0,0,0.24);
-}
-
-#posts #page-nav a.disabled {
-    display: none;
 }
 
 
